URL based data access instead of inputstream based (file based MM container access still to be removed)